--- a/markup/css/chat.css
+++ b/markup/css/chat.css
@@ -1,5 +1,6 @@
 body {
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	color: #FFFFFF;
 	overflow: hidden;
 	background: #111C22;
 	display: flex;
@@ -43,14 +44,52 @@ body {
 }
 
 .chat__container {
+	display: flex;
+	align-items: flex-end;
 	height: 100%;
+	padding: 0 5rem;
+}
+
+.chat__wrapper {
+	width: 100%;
+	display: flex;
+	align-items: flex-end;
+	flex-direction: column;
+}
+
+.chat__wrapper-mesage {
+	width: 100%;
+	margin-bottom: 1rem;
+}
+
+.chat__wrapper-mesage.send {
+	width: 100%;
+	display: flex;
+	justify-content: flex-end;
+}
+
+.chat__mesage {
+	width: 40%;
+	background: #4CAA85;
+	box-shadow: inset 0px -6px 13px rgba(0, 0, 0, 0.15);
+	border-radius: 10px;
+	padding: 1rem;
+	font-size: 1.5rem;
+}
+
+.chat__mesage.send {
+	background: #4CAA85;
+}
+
+.chat__mesage.received {
+	background: #646C71;
 }
 
 .chat__footer {
 	height: 5rem;
 	width: 100%;
 	background: #1F2C34;
-	padding: 0 5rem 0 5rem;
+	padding: 0 5rem;
 }
 
 .chat__form {
