--- a/markup/css/chat.css
+++ b/markup/css/chat.css
@@ -1,15 +1,19 @@
-body {
+.page {
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-	color: #FFFFFF;
 	overflow: hidden;
-	background: #111C22;
+	height: 100%;
+}
+
+.page__chat {
 	display: flex;
 	justify-content: center;
+	background: #111C22;
+	color: #FFFFFF;
 }
 
 .chat {
 	height: 100%;
-	width: 835px;
+	width: 60rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -39,7 +43,6 @@ body {
 
 .chat__numbet {
 	font-size: 1.5rem;
-	font-size: 18px;
 	color: #FFFFFF;
 }
 
@@ -113,7 +116,7 @@ body {
 	border-radius: 10px;
 	overflow-wrap: break-word;
 	padding: 0.5rem 2rem;
-	font-size: 22px;
+	font-size: 1.5rem;
 	color: #FFFFFF;
 }
 
