--- a/markup/css/chat.css
+++ b/markup/css/chat.css
@@ -29,8 +29,14 @@
 .chat__contact {
 	display: flex;
 	align-items: center;
+	justify-content: space-between;
 	height: 100%;
-	margin-left: 8rem;
+	margin: auto 5rem;
+}
+
+.chat__contact-wrapper {
+	display: flex;
+	align-items: center;
 }
 
 .contact__avatar {
@@ -131,7 +137,7 @@
 
 @media (max-width: 650px) {
 	.chat__contact {
-		margin-left: 4rem;
+		margin: auto 2rem;
 	}
 
 	.chat__container {
